--- a/investwithalpha.html
+++ b/investwithalpha.html
@@ -9,6 +9,18 @@
 </head>
 <body>
     <section class="bg-[#212734]">
+        <nav class="flex items-center justify-between px-[3rem] py-[25px] text-white">
+            <div>
+                <img src="" alt="">
+                <a href=""><h1 class="text-2xl md:text-3xl lg:text-4xl font-bold cursor-pointer">SwissBorg</h1></a>
+            </div>
+            <div class="hidden lg:flex items-center gap-8">
+                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold  hover:text-[#01C38D] hover:border-b-2 hover:border-[#01C38D]" href="">Invest</a>
+                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold  hover:text-[#01C38D] hover:border-b-2 hover:border-[#01C38D]" href="">About Us</a>
+            </div>
+            <button class="px-[15px] py-[5px] bg-[#01C38D] font-bold rounded-full">Download App</button>
+        </nav>
+
         <div class="py-[8rem] px-[4rem] justify-center text-center">
             <div>
                 <h1 class="text-white text-[72px] font-bold">This is Alpha. Explore projects.</h1>
