--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
 </head>
 <body>
     <div class="bg-[#191E29] h-[120vh] md:h-[160vh] text-white" >
-        <nav class="flex items-center md:w-full md:mx-0 md:justify-between justify-center lg:w-[60%] py-4 px-6 mx-auto md:px-10 lg:px-20 lg:gap-[400px]">
+        <nav class="flex items-center justify-between w-[95%] lg:w-[70%] mx-auto pt-[20px]">
             <div>
                 <img src="" alt="">
                 <a href=""><h1 class="text-2xl md:text-3xl lg:text-4xl font-bold cursor-pointer">SwissBorg</h1></a>
             </div>
         
-            <div class="flex flex-row lg:block md:block items-center gap-8">
-                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold md:hidden hover:text-[#01C38D] hover:border-b-2 hover:border-[#01C38D]" href="">Invest</a>
-                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold md:hidden hover:text-[#01C38D] hover:border-b-2 hover:border-[#01C38D]" href="">About Us</a>
+            <div class="hidden lg:flex items-center gap-8">
+                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold  hover:text-[#01C38D] hover:border-b-2 hover:border-[#01C38D]" href="">Invest</a>
+                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold  hover:text-[#01C38D] hover:border-b-2 hover:border-[#01C38D]" href="">About Us</a>
             </div>
         
-            <div class="flex items-center md:hidden ">
-                <h1 class="text-lg md:text-lg lg:text-xl cursor-pointer "><span class="text-lg md:text-lg lg:text-xl"><i class="bi bi-globe"></i></span> EN</h1>
-            </div>
+            <h1 class="hidden lg:block text-lg md:text-lg lg:text-xl "><span class="text-lg md:text-lg lg:text-xl"><i class="bi bi-globe"></i></span> EN</h1>
+  
 
             <i class="bi bi-list block lg:hidden"></i>
         </nav>
