--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,19 @@
 </head>
 <body>
     <section>
+        <nav class="flex items-center justify-between px-[3rem] py-[25px]">
+            <div>
+                <img src="" alt="">
+                <a href=""><h1 class="text-2xl md:text-3xl lg:text-4xl font-bold cursor-pointer">SwissBorg</h1></a>
+            </div>
+            <div class="hidden lg:flex items-center gap-8">
+                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold  hover:text-[#01C38D] hover:border-b-2 hover:border-[#01C38D]" href="">Invest</a>
+                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold  hover:text-[#01C38D] hover:border-b-2 hover:border-[#01C38D]" href="">About Us</a>
+            </div>
+            <h1 class="hidden lg:block text-lg md:text-lg lg:text-xl "><span class="text-lg md:text-lg lg:text-xl"><i class="bi bi-globe"></i></span> EN</h1>
+            <i class="bi bi-list block lg:hidden"></i>
+        </nav>
+
         <div class="flex gap-[50px] items-center px-[3rem] py-[6rem]">
             <div>
                 <h1 class="font-bold text-[70px] font-sans leading-tight">Useful Account Analysis at the tap of a finger</h1>
@@ -131,15 +144,15 @@
                     <p class="text-[18px] py-[15px] text-white">Follow and subscribe to our channels</p>
                 </div>
                 <div class="flex gap-[25px] text-center items-center">
-                    <i class="bi bi-twitter-x bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-discord bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-youtube bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-facebook bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-instagram bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-linkedin bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-telegram bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-tiktok bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-tiktok bg-white px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-twitter-x bg-white text-[#735EFF] px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-discord bg-white text-[#735EFF] px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-youtube bg-white text-[#735EFF] px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-facebook bg-white text-[#735EFF] px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-instagram bg-white text-[#735EFF] px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-linkedin bg-white text-[#735EFF] px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-telegram bg-white text-[#735EFF] px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-tiktok bg-white text-[#735EFF] px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-tiktok bg-white text-[#735EFF] px-[8px] py-[5px] rounded-md"></i>
                 </div>
             </div>
         </div>
