--- a/buycryptos.html
+++ b/buycryptos.html
@@ -25,7 +25,7 @@
 
         <div class="lg:flex md:flex-row sm:flex-col lg:gap-[70px] sm:gap-[30px] md:gap-[65px] items-center md:justify-center px-[3rem] py-[8rem] md:px[5rem] sm:[6rem]">
             <div>
-                <h1 class="font-bold lg:text-[70pxpx] sm:text-[100px] md:text-[60px] lg:text-left md:text-center sm:text-center font-sans leading-tight">Go from Fiat to Crypto in an instant!</h1>
+                <h1 class="font-bold lg:text-[70px] sm:text-[100px] md:text-[60px] lg:text-left md:text-center sm:text-center font-sans leading-tight">Go from Fiat to Crypto in an instant!</h1>
                 <p class="text-[20px] py-[40px] lg:text-left md:text-center sm:text-center sm:text-[30px]">Connect to Binance, HitBTC, LMAX, Kraken, Bitfinex, Orca and Phoenix exchanges and get the best liquidity and rates in seconds.</p>
             </div>
             <img src="/images/buyhero-img.avif" class="md:w-[60%] lg:w-[55%] sm:w-[50%] md:mx-auto sm:mx-auto" alt="">
