--- a/portfolio.html
+++ b/portfolio.html
@@ -177,7 +177,7 @@
                     </div>
                 </div>
             </div>
-
+        </div>
         <div class="flex gap-[50px] items-center px-[3rem] py-[6rem]">
             <div>
                 <h1 class="font-bold text-[70px] font-sans leading-tight">Useful Account Analysis at the tap of a finger</h1>
