--- a/assetAnalysis.html
+++ b/assetAnalysis.html
@@ -178,6 +178,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </div>
 
     <div class="lg:flex lg:w-[76%] lg:mx-auto sm:flex-col-reverse sm:mx-auto items-center gap-8 px-6 my-8 md:mx-auto md:flex-row md:gap-18 md:px-20 md:my-16 lg:px-32">
