--- a/automate.html
+++ b/automate.html
@@ -178,7 +178,7 @@
                     </div>
                 </div>
             </div>
-
+        </div>
         <div class="flex gap-[45px] items-center py-[10rem] px-[2rem]">
             <div>
                 <h1 class="text-[70px] font-semibold">Automate your investments</h1>
