--- a/buycryptos.html
+++ b/buycryptos.html
@@ -179,7 +179,7 @@
                     </div>
                 </div>
             </div>
-
+        </div>
         <div class="lg:flex md:flex-row sm:flex-col lg:gap-[70px] sm:gap-[30px] md:gap-[65px] items-center md:justify-center w-[90%] md:w-[100%] md:px-[2rem] mx-auto lg:py-[8rem] py-[4rem]">
             <div class="text-center">
                 <h1 class="font-bold lg:text-[65px] text-3xl md:text-[40px] lg:text-left md:text-center sm:text-center font-sans leading-tight">Go from Fiat to Crypto in an instant!</h1>
