--- a/cardFunding.html
+++ b/cardFunding.html
@@ -178,6 +178,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </div>
 
     <div class="flex flex-col lg:flex-row w-full  mx-auto  sm:mx-auto items-center gap-8 px-[1rem] md:px-[3rem] lg:px-[4rem] my-8">
