more responsiveness and a simpler javascript code

--- a/diversify.html
+++ b/diversify.html
@@ -191,6 +191,10 @@
             <img class="w-[75%] lg:w-[45%] mx-auto my-[50px]" src="/Image/plentycoin.avif" alt="Front-View">
         </div> 
     </div>
+
+    <div class=" container absolute z-50  right-[20%] top-[10%] w-[65%] mx-auto border border-[#01C38D] bg-white rounded-xl hidden">
+
+    </div>
     
     <div class="my-[100px]">
         <h1 class="text-center text-3xl md:text-5xl lg:text-5xl font-bold">Why Choose Thematic Investing</h1>
