bugs fixed and more responsiveness added

--- a/about.html
+++ b/about.html
@@ -510,6 +510,11 @@
             </div>
         </div>
     </footer>
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script src="/JS/mySwissborg.js"></script>
+    <script scr="/JS/swissborg.js"></script>
 </body>
 </html>
