--- a/portfolio.html
+++ b/portfolio.html
@@ -202,12 +202,12 @@
             </div>
             <p class="px-[6rem] text-[#7c818b]">&copy SBorg SA. All Rights Reserved.</p>
         </div>
-
+    </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
-    <script src="/JS/swissborg.js"></script>
-    </footer>
+    <script src="/JS/mySwissborg.js"></script>
+    <script scr="/JS/swissborg.js"></script>
 </body>
 </html>
