--- a/assetAnalysis.html
+++ b/assetAnalysis.html
@@ -497,5 +497,12 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script src="/JS/mySwissborg.js"></script>
+    <script scr="/JS/swissborg.js"></script>
 </body>
 </html>
