--- a/automate.html
+++ b/automate.html
@@ -460,5 +460,12 @@
             <p class="px-[6rem] text-[#7c818b]">&copy SBorg SA. All Rights Reserved.</p>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script src="/JS/mySwissborg.js"></script>
+    <script scr="/JS/swissborg.js"></script>
 </body>
 </html>
