--- a/buycryptos.html
+++ b/buycryptos.html
@@ -190,35 +190,35 @@
 
         <div class="lg:w-[60%] w-[85%] md:w-[95%] lg:px[4rem] md:px-[1rem] mx-auto md:py-[1rem] py-[2rem] items-center">
             <p  data-aos="fade-up" class="font-bold text-[25px] md:text-[28px] lg:text-[40px] lg:py-[2rem] py-[1rem] text-center mx-auto leading-tight">Our revolutionary Smart Engine takes the guesswork out of investing</p>
-            <div data-aos="flip-right" class="flex lg:gap-[25px] gap-[10px] items-center justify-center lg:text-[18px] md:text-[18px] text-[15px]">
-                <a href="" class="px-[12px] py-[8px] bg-[#E5F9F3] text-[#01C38D] rounded-lg">Best execution</a>
-                <a href="">Unique trading pairs</a>
-                <a href="">Transparent</a>
-                <a href="">No hidden fees</a>
+            <div data-aos="flip-right" class="flex lg:gap-[10px] gap-[10px] items-center justify-center lg:text-[15px] md:text-[18px] text-[15px]">
+                <button id="bestExecutionBtn" class="px-2 md:px-6 py-2 rounded-md  focus:outline-none text-sm md:text-lg">Best execution</button>
+                <button id="uniqueTradingPairBtn" class="px-2 md:px-6 py-2 rounded-md  focus:outline-none text-sm md:text-lg">Unique trading pair</button>
+                <button id="transparentBtn" class="px-2 md:px-6 py-2 rounded-md focus:outline-none text-sm md:text-lg">Transparent</button>
+                <button id="noHiddenFeesBtn" class="px-2 md:px-6 py-2 rounded-md focus:outline-none text-sm md:text-lg">No Hidden Fees</button>
             </div>
 
-            <div class="lg:flex md:flex-row sm:flex-col gap-[45px] items-center py-[4rem]">
+            <div id="bestExecutionBtn" class="lg:flex md:flex-row sm:flex-col gap-[45px] items-center py-[4rem]">
                 <img src="/images/buy-sell-2.avif" alt="" class="lg:w-[50%] md:mx-auto md:w-[55%] w-90%">
                 <div>
                     <h1 class="font-bold lg:text-[30px] text-[25px] md:py-[15px] py-[30px]">Buy, sell & exchange always at the best available price</h1>
                     <p class="lg:text-[16px] md-[15px] text-[14px]">Market volatility often leads to price differences across exchanges. Our Smart Engine takes advantage of this by finding the best execution route every time, meaning you get the best price from multiple exchanges.</p>
                 </div>
             </div>
-            <div class="lg:flex md:flex-row sm:flex-col gap-[45px] items-center py-[4rem]">
+            <div id="uniqueTradingPairBtn" class="lg:flex md:flex-row sm:flex-col gap-[45px] items-center py-[4rem]">
                 <img src="/images/united-trading-img.avif" alt="" class="lg:w-[50%] md:mx-auto md:w-[55%] w-90%">
                 <div>
                     <h1 class="font-bold lg:text-[30px] text-[25px] md:py-[15px] py-[30px]">Access 5,133 unique crypto to fiat trading pairs</h1>
                     <p class="lg:text-[16px] md-[15px] text-[14px]">Trade any fiat or crypto pair, even if it doesn’t exist on any exchange. EUR to BORG, or CHF to PAX Gold and more! We do all the conversions for you and find the best route and price.</p>
                 </div>
             </div>
-            <div class="lg:flex md:flex-row sm:flex-col gap-[45px] items-center py-[4rem]">
+            <div id="transparentBtn" class="lg:flex md:flex-row sm:flex-col gap-[45px] items-center py-[4rem]">
                 <img src="/images/transparent-img.avif" alt="" class="lg:w-[50%] md:mx-auto md:w-[55%] w-90%">
                 <div>
                     <h1 class="font-bold lg:text-[30px] text-[25px] md:py-[15px] py-[30px]">Get a fully transparent exchange reporte</h1>
                     <p class="lg:text-[16px] md-[15px] text-[14px]">With the Smart Exchange Report, you will be able to review and keep track of every exchange. Review all the details at each step of your exchange.</p>
                 </div>
             </div>
-            <div class="lg:flex md:flex-row sm:flex-col gap-[45px] items-center py-[4rem]">
+            <div id="noHiddenFeesBtn" class="lg:flex md:flex-row sm:flex-col gap-[45px] items-center py-[4rem]">
                 <img src="/images/hidden-fees-img.avif" alt="" class="lg:w-[50%] md:mx-auto md:w-[55%] w-90%">
                 <div>
                     <h1 class="font-bold lg:text-[30px] text-[25px] md:py-[15px] py-[30px]">Enjoy zero spreads and no inflated exchange rates</h1>
