only one change

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
     
                 <div class="hidden my-[20px] overflow-y-scroll p-[1rem]" id="aboutContent">
-                    <a class="high" href="http://127.0.0.1:5501/abouttml">
+                    <a class="high" href="http://127.0.0.1:5501/about.html">
                         <div class="flex items-center justify-between mb-3">
                             <div class="flex items-center justify-between gap-[7px]">
                                 <img class="w-12" src="/Image/swissborg-app.svg" alt="">
